<resources>
    <string name="app_name">Moody</string>

    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>

    <string name="alertdialog_ads_metin">To use our services, you must either subscribe or watch an advertisement every -XX- minutes. What is your preference? \n-Sub is very cheap by the way :)</string>
    <string name="alertdialog_ads">Watch Ads!</string>
    <string name="alertdialog_subscribe">Subscribe </string>

    <string name="reklamkaldirText">Reklamları Kaldır</string>
    <string name="moody">Moody</string>
    <string name="dosya_yok">There is no file!</string>
    <string name="_00_00">00.00</string>
    <string name="add">Search</string>
    <string name="search">Search…</string>
    <string name="deneme_text_video_ad_deneme_text">deneme Text - Video adı deneme text</string>
    <string name="_1_000_000_izlenme">1.000.000 izlenme</string>
    <string name="search_button">Search</string>
    <string name="app_icon">App Icon</string>
    <string name="song_thumbnail">Song Thumbnail</string>
    <string name="previous_song">Previous Song</string>
    <string name="next_song">Next Song</string>
    <string name="resume_and_pause">Resume and Pause</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="no_ads">no ads</string>
    <string name="loading">Loading…</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Search</string>
    <string name="title_library">Library</string>
    <string name="title_settings">More</string>

    <string name="no_ads_year_plan">No Ads</string>
    <string name="no_ads_purchased">\"No Ads - Year Plan\" purchased!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">iletisim@boztekno.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_bottom_main">Moody</string>
    <string name="search_and_start_listening">Search and start listening!</string>
    <string name="download">download</string>
    <string name="imageofsound">imageOfSound</string>
    <string name="downloading">Downloading..</string>
    <string name="there_is_no_downloaded_file">There is no downloaded file</string>
    <string name="ornekSure">0:30</string>
    <string name="thumbnailContentDesc">Thumbnail</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="save_to_phone">Save To Phone</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="file_could_not_found">File could not found!</string>
    <string name="song_name">song name</string>
    <string name="unknown"><![CDATA[<unknown>]]></string>
    <string name="todo">TODO</string>
</resources>