<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MediaPlayerActivity">

    <androidx.legacy.widget.Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/thumbImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/thumbnail"
        android:src="@drawable/audiodefaulticon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.legacy.widget.Space
        android:id="@+id/space4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@+id/songNameText" />

    <TextView
        android:id="@+id/songNameText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/file_could_not_found"
        android:textColor="@color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbImage"
        app:layout_constraintWidth_percent="0.9" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/seekbar"
        android:backgroundTint="@color/griKapali"
        android:progressTint="@color/whiteTransparent"
        android:thumbTint="@color/white"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space4"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/sayacStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/_00_00"
        android:textColor="@color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/space4"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/sayacFinish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/_00_00"
        android:textColor="@color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/space4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.2" />

    <ImageView
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        tools:src="@drawable/next_button"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/next_song"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startStopButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintWidth_percent="0.16" />

    <ImageView
        android:id="@+id/startStopButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        tools:src="@drawable/resume_button"
        android:contentDescription="@string/resume_and_pause"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/previousButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintWidth_percent="0.16" />

    <ImageView
        android:id="@+id/previousButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        tools:src="@drawable/previous_button"
        android:contentDescription="@string/previous_song"
        app:layout_constraintEnd_toStartOf="@+id/startStopButton"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintWidth_percent="0.16" />

</androidx.constraintlayout.widget.ConstraintLayout>