<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/bottomviewmedia"
        app:itemIconTint="@color/whiteTransparent"
        app:itemTextColor="@color/whiteTransparent"
        app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_bottom_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomMediaView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/contentviewbackground"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.95">

        <ImageView
            android:id="@+id/bMedia_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/space"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="@+id/space"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.18"
            app:srcCompat="@drawable/audiodefaulticon" />

        <androidx.legacy.widget.Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.18" />

        <TextView
            android:id="@+id/bMedia_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center"
            android:maxLines="1"
            android:text="@string/song_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/bMedia_album"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.63" />

        <TextView
            android:id="@+id/bMedia_album"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center"
            android:text="@string/unknown"
            android:textColor="@color/white"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toBottomOf="@+id/bMedia_title"
            app:layout_constraintWidth_percent="0.6" />

        <ImageView
            android:id="@+id/startstopImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/moody"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_media_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/space2"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.15" />

        <androidx.legacy.widget.Space
            android:id="@+id/space2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.02" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>