<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintforitemvideo"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:alpha="0.8">

    <!-- Alttaki imageview backroundu kod ile değiştirildi(list adapter'da)-->

    <View
        android:id="@+id/thumbSuperView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/audiomodelTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/videoTitle"
        app:layout_constraintHeight_percent="0.95"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.18" />

    <ImageView
        android:id="@+id/thumbnailView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/song_thumbnail"
        app:layout_constraintBottom_toBottomOf="@+id/thumbSuperView"
        app:layout_constraintEnd_toEndOf="@+id/thumbSuperView"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="@+id/thumbSuperView"
        app:layout_constraintTop_toTopOf="@+id/thumbSuperView"
        app:layout_constraintWidth_percent="0.13" />


    <TextView
        android:id="@+id/videoTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start"
        android:text="@string/deneme_text_video_ad_deneme_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/videoSeconds"
        app:layout_constraintEnd_toStartOf="@+id/moreButton"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thumbSuperView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.60" />

    <TextView
        android:id="@+id/videoAuthor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="@+id/videoTitle"
        app:layout_constraintTop_toBottomOf="@+id/videoTitle"
        app:layout_constraintWidth_percent="0.30" />

    <TextView
        android:id="@+id/videoSeconds"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/videoTitle"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toBottomOf="@+id/videoTitle"
        app:layout_constraintWidth_percent="0.20" />

    <ImageButton
        android:id="@+id/moreButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:contentDescription="@string/more"
        android:scaleType="fitCenter"
        android:src="@drawable/moreaudio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/videoTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>