<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LibraryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/downloadingFileView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@color/acikGri"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/downloadingImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/imageofsound"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.23"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/downladingTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/downloading"
            android:textColor="@color/whiteTransparent"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/cancelDownloadButton"
            app:layout_constraintHeight_percent="0.65"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/downloadingImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:id="@+id/textnull"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/downloading"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="@+id/downladingTitle"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="@+id/downladingTitle"
            app:layout_constraintTop_toBottomOf="@+id/downladingTitle"
            app:layout_constraintWidth_percent="0.34" />

        <ImageButton
            android:id="@+id/cancelDownloadButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/griKapali"
            android:scaleType="center"
            android:background="@drawable/contentviewbackground"
            android:src="@android:drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/downladingTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12"
            app:tint="@color/whiteTransparent" />

        <ProgressBar
            android:id="@+id/downloadProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:progress="1"
            android:progressTint="@color/whiteTransparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperRefreshLib"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadingFileView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLib"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/textnoDownloaded"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintHeight_percent="0.045"
        android:text="@string/there_is_no_downloaded_file"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>